--- a/Hopper Puzzle_201911/hopper_puzzle.ipynb
+++ b/Hopper Puzzle_201911/hopper_puzzle.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     " ## Hopper Puzzle\n",
-    " Hopper provided a dataset for their Senior Data Analyst post, so I thought to explore what the data can tell us.\n",
+    " Hopper provided a dataset as a puzzle, so I thought to explore what the data can tell us.\n",
     " (Source: http://bit.ly/2q6U8dq)"
    ]
   },
